--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>
+        {% block title  %}
+        Default value
+        {% endblock  %}
+    </title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-    <h1>byebdyeb</h1>
+
+    <na>this is our navbar</na v>
+    {% block content  %}{% endblock  %}
     
 </body>
 </html>
